[tool.poetry]
name = "documentation"
version = "0.1.0"
description = ""
authors = ["Christopher Dixon <christopher.snipes.dixon@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.42"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
